# AiEDA

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.final  README.en.md  README.md  README_DOCKER.md  build.sh  build_docker.sh  pyproject.toml  requirements.txt  setup.py
aieda/: __init__.py
aieda/ai/: __init__.py  config_base.py  design_utils.py  evaluate_base.py  inst_utils.py  model_base.py  net_utils.py  patch_utils.py  path_utils.py  pattern_utils.py  process_base.py  trainer_base.py
aieda/analysis/: __init__.py  base.py  design.py  net.py  patch.py  path.py  utility.py
aieda/data/: __init__.py  feature.py  patterns.py  vectorization.py  vectors.py
aieda/eda/: __init__.py
example/: README.md  README_EN.md
test/: batch_extract_README.md  batch_extract_place_features.py  batch_extract_route_features.py  batch_run_all_designs.py  design_list.json  import_aieda.py  process_sdc_files.py  test.order.readme  test_ai_task_dse.py  test_ai_task_placement.py  test_analysis_design.py  test_analysis_net.py  test_analysis_patch.py  test_analysis_path.py  test_dse.py  test_flow_closure.py  test_gui.py  test_ieda_backend.py  test_ieda_eval.py  test_ieda_evaluation.py  test_ieda_feature.py  test_ieda_flows.py  test_ieda_gui.py  test_ieda_steps.py  test_ieda_vectorization.py  test_ieda_vectors.py  test_parameters.py  test_patterns.py  test_report.py  test_sky130.py  test_sky130_gcd.py  test_sky130_gcd_dse.py  test_sky130_gcd_place.py  test_sky130_place.py  test_sky130_ppa_map.py  test_sky130_route_data.py  test_workspace.py
(+2011 files in other folders)
